--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,11 +15,10 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install iputils-ping
 
 # [Optional] Uncomment the next lines to use go get to install anything else you need
-# USER vscode
-# RUN go get -u github.com/golang/protobuf/protoc-gen-go
-# RUN go get -u github.com/stretchr/testify
-# RUN go install github.com/golang/mock/mockgen@v1.6.0
-# RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.49.0
+USER vscode
+RUN go install github.com/golang/protobuf/protoc-gen-go@latest
+RUN go install github.com/golang/mock/mockgen@v1.6.0
+RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.49.0
 
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
